Jenkins for Kubernetes/jenkins.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      volumes:
      - name: jenkins-pv
        persistentVolumeClaim:
          claimName: jenkins-pvc
      containers:
      - name: jenkins
        image: harbor.uswest3.lyr.id/publiclyrid/jenkinslyrid:1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 4
          requests:
            cpu: 1
        volumeMounts:
        - name: jenkins-pv
          mountPath: /var/jenkins_home/

---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: jenkins

---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
spec:
  type: ClusterIP
  ports:
  - port: 50000
    targetPort: 50000
  selector:
    app: jenkins


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  ingressClassName: nginx ##change to your specific nginx class name
  rules:
  - host: "jenkins.example.com" ##change to url that you want to publish the jenkins
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jenkins-web
            port:
              number: 80
